--- a/css/styles.css
+++ b/css/styles.css
@@ -259,18 +259,13 @@ ul {
   justify-content: center;
 }
 
-.svg-mail {
-  width: 16px;
-  height: 12px;
+.icon {
   margin-right: 10px;
-  align-items: center;
+  align-self: center;
 }
 
-.svg-phone {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-  align-items: center;
+.header-contacts {
+  display: flex;
 }
 
 .svg-main {
