--- a/css/styles.css
+++ b/css/styles.css
@@ -201,11 +201,9 @@ ul {
   color: var(--accent-color);
 }
 
-.active-button {
+.active {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  background-color: var(--accent-color);
-  color: var(--header-bg-color);
 }
 
 /* Contacts-list */
