--- a/css/styles.css
+++ b/css/styles.css
@@ -201,11 +201,6 @@ ul {
   color: var(--accent-color);
 }
 
-.active {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
 /* Contacts-list */
 
 .contacts-list {
@@ -524,6 +519,13 @@ ul {
   cursor: pointer;
   border-radius: 4px;
   padding: 6px 22px;
+}
+
+.active {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  color: #ffffff;
+  background-color: #2196f3;
 }
 
 .button-list .item + .item {
